--- a/boost/libs/bind/bind.html
+++ b/boost/libs/bind/bind.html
@@ -761,7 +761,7 @@ namespace
 				(<STRONG>make_adaptable</STRONG>
 			helper function)
 			<li>
-				<A href="bind_test.cpp">libs/bind/bind_test.cpp</A>
+				<A href="test/bind_test.cpp">libs/bind/test/bind_test.cpp</A>
 			(test)
 			<li>
 				<A href="bind_as_compose.cpp">libs/bind/bind_as_compose.cpp</A>
@@ -770,16 +770,16 @@ namespace
 				<A href="bind_visitor.cpp">libs/bind/bind_visitor.cpp</A>
 			(visitor example)
 			<li>
-				<A href="bind_stdcall_test.cpp">libs/bind/bind_stdcall_test.cpp</A>
+				<A href="test/bind_stdcall_test.cpp">libs/bind/test/bind_stdcall_test.cpp</A>
 			(test with __stdcall functions)
 			<li>
-				<A href="bind_stdcall_mf_test.cpp">libs/bind/bind_stdcall_mf_test.cpp</A>
+				<A href="test/bind_stdcall_mf_test.cpp">libs/bind/test/bind_stdcall_mf_test.cpp</A>
 			(test with __stdcall member functions)
 			<li>
-				<A href="bind_fastcall_test.cpp">libs/bind/bind_fastcall_test.cpp</A>
+				<A href="test/bind_fastcall_test.cpp">libs/bind/test/bind_fastcall_test.cpp</A>
 			(test with __fastcall functions)
 			<li>
-				<A href="bind_fastcall_mf_test.cpp">libs/bind/bind_fastcall_mf_test.cpp</A> (test 
+				<A href="test/bind_fastcall_mf_test.cpp">libs/bind/test/bind_fastcall_mf_test.cpp</A> (test 
 				with __fastcall member functions)</li></ul>
 		<h3><a name="Dependencies">Dependencies</a></h3>
 		<ul>
